Source/WebCore/rendering/RenderLayer.h
@@ -579,6 +579,7 @@ public:
         IncludeLayerFilterOutsets = 1 << 2,
         ExcludeHiddenDescendants = 1 << 3,
         DontConstrainForMask = 1 << 4,
+        IncludeCompositedDescendants = 1 << 5,
         DefaultCalculateLayerBoundsFlags =  IncludeSelfTransform | UseLocalClipRectIfPossible | IncludeLayerFilterOutsets
     };
     typedef unsigned CalculateLayerBoundsFlags;
